TERASOLUTION userreservarionが動作する状態